--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 	"description": "",
 	"dependencies": {
 		"express": "^4.19.2",
+		"jsonwebtoken": "^9.0.2",
+		"mongoose": "^8.5.1",
 		"nodemon": "^3.1.4"
 	}
 }
